fix name overlapping next column

--- a/style/index.css
+++ b/style/index.css
@@ -64,6 +64,7 @@
 
 .filetree-item-name {
   padding-left: var(--indent);
+  padding-right: 10px; /* fixes overlap into next column*/
   display: flex;
 }
 
